<resources>
    <!-- Main -->
    <string name="app_name">Project2</string>
    <string name="title_find">Find</string>
    <string name="title_map">Map</string>
    <string name="title_account">Account</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">New user? Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_display_name">Not a valid display name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="error_password">Your password is wrong, please check.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_log_out">Logout</string>
    <string name="error_sign_up">Sign up failed. Please try again.</string>


    <!-- Map -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBfmr1rVOy-KeXKioqwzjzEMKIQ0Fow4ek</string>
    <string name="action_promote_send_post">Send Post</string>

    <!-- Send Post -->
    <string name="prompt_post_type">Post Type</string>
    <string name="post_type_on">Plant</string>
    <string name="post_type_off">Animal</string>
    <string name="prompt_post_species">Post Species</string>
    <string name="prompt_post_location">Your Location</string>
    <string name="prompt_post_lon">Longitude</string>
    <string name="prompt_post_lat">Latitude</string>
    <string name="action_send_post">Send Post</string>
    <string name="invalid_image">Please choose a image</string>
    <string name="invalid_title">Not a valid Post Title.</string>
    <string name="invalid_message">Not a valid Post Message.</string>


    <!-- Find -->
    <string-array name="spingarr">
        <item>Latest Post Time</item>
        <item>Nearest Post Location</item>
    </string-array>

    <string name="error_upload_image">Error happened when uploading image. Please try again.</string>
    <string name="success_send_post">Your post has been received!</string>
    <string name="error_label">We cannot recognize your image. Please upload Plants or Animals.</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="select_post_image">Select Post Image</string>
    <string name="select_icon">Select Icon</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">Display Name</string>
    <string name="post_type">Post Type</string>
    <string name="post_title">Post Title</string>
    <string name="message">Message</string>

</resources>