<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_finder">

    <fragment
        android:id="@+id/navigation_finder"
        android:name="com.comp90018.proj2.ui.finder.FinderFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_finder" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.comp90018.proj2.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
<!--        <argument-->
<!--            android:name="latitude"-->
<!--            app:nullable="true" />-->
<!--        <argument-->
<!--            android:name="longitude"-->
<!--            app:nullable="true" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.comp90018.proj2.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>